--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -318,6 +318,7 @@
   <!-- Custom scripts for all pages-->
   <script src="{% static 'caja/js/sb-admin-2.min.js' %}"></script>
   <script src="{% static 'caja/js/printThis.js' %}"></script>
+  <script src="{% static 'caja/js/numeroLetras.js' %}"></script>
   <!-- Page level plugins -->
   <script src="{% static 'caja/vendor/chart.js/Chart.min.js' %}"></script>
 
